<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/storage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/seaperateLineRight"
        android:layout_width="160dp"
        android:layout_height="1dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/EmailInput"
        app:layout_constraintEnd_toEndOf="@+id/EmailInput"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toEndOf="@+id/OrTextView"
        app:layout_constraintTop_toBottomOf="@+id/questionAaccountTextView"
        app:layout_constraintVertical_bias="0.979" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="72dp"
        android:contentDescription="@string/setContentValueLoginActivityForLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/_8481652cef1014c0b5e4981" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:text="@string/loginTextView"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/questionAaccountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToSingUp"
        android:text="@string/questionAaccountTextView"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView"
        app:layout_constraintVertical_bias="0.014"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="346dp"
        android:layout_height="67dp"
        app:boxStrokeColor="#FF5722"
        app:hintTextColor="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionAaccountTextView"
        app:layout_constraintVertical_bias="0.319">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/emailHitForLoginLayout"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="346dp"
        android:layout_height="67dp"
        app:boxStrokeColor="#FF5722"
        app:endIconMode="password_toggle"
        app:hintTextColor="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/EmailInput"
        app:layout_constraintStart_toStartOf="@+id/EmailInput"
        app:layout_constraintTop_toBottomOf="@+id/EmailInput"
        app:layout_constraintVertical_bias="0.077">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/seaperateLineLeft"
        android:layout_width="160dp"
        android:layout_height="1dp"
        android:layout_marginBottom="60dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/EmailInput"
        app:layout_constraintEnd_toStartOf="@+id/OrTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/EmailInput"
        app:layout_constraintTop_toBottomOf="@+id/questionAaccountTextView"
        app:layout_constraintVertical_bias="0.989" />

    <TextView
        android:id="@+id/OrTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/separator"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EmailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionAaccountTextView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="297dp"
        android:layout_height="59dp"
        android:onClick="signIn"
        android:backgroundTint="#FF5722"
        android:backgroundTintMode="add"
        android:text="@string/letsgo"
        android:textColor="#FFFFFF"
        app:cornerRadius="18dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.566"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/forgetPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/forgetPasswordText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/finishButton"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.089" />

    <ImageView
        android:id="@+id/googleAPI"
        android:layout_width="61dp"
        android:layout_height="54dp"
        android:layout_marginEnd="140dp"
        android:contentDescription="@string/setContentValueLoginActivityForGoogleApi"
        app:layout_constraintBottom_toTopOf="@+id/seaperateLineRight"
        app:layout_constraintEnd_toEndOf="@+id/seaperateLineRight"
        app:layout_constraintTop_toBottomOf="@+id/questionAaccountTextView"
        app:layout_constraintVertical_bias="0.511"
        app:srcCompat="@drawable/icons8_google_240" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- - Mobile Version XML
        - By Mehran Alam Beigi for Every Developr
        - this Soruce for selling
    -->

<!--

 این برنامه توسط مهران علم بیگی توسعه داده میشود هرگونه
 کپی اساسا حرام است ... این سورس جنبه های دیگری برای استفاده نیز دارد که به شرح زیر است :

 1 . استفاده تجاری
 2. ارائه به عنوان نمونه کار

MobilePhoneDeveloper : +989211756034
Email for job inquiries : mehranalambeigi@gmail.com

-->